# HU4PY

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
hufpy/: __init__.py  _shared.py  application.py
hufpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hufpy/assets/: hufpy.js  index.html
hufpy/assets/icons/: icon.icns
hufpy/assets/styles/: common.css  darwin.css
hufpy/widgets/: __init__.py  _base.py  _buttons.py  _displays.py  _tab.py  _table.py  _windows.py  inputs.py  layouts.py
test/: test.py
test/views/: TableShowcase.py  WidgetShowcase.py
