[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "HUFPY"
authors = [{name = "oyajiDev", email = "this.dev.somehit@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "pywebview==3.7.2",
    "pythonnet==2.5.1; sys_platform=="win32"",
    "cefpython3==66.1; sys_platform=="win32"",
    "PySide6==6.5.3; sys_platform=="linux"",
    "QtPy==2.4.0; sys_platform=="linux"",
    "pandas==2.1.1"
]
classifiers = [
    "License :: OSI Approved :: MIT License",

    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.flit.module]
name = "hufpy"

[project.urls]
Home = "https://github.com/oyajiDev/HU4PY"
